# burn_deeplab_3d

./: .pre-commit-config.yaml  docker-compose.yml  readme.md
backend/: .gitignore  pyproject.toml
backend/backend/: asgi.py  celery.py  mixins.py  urls.py
backend/backend/settings/: base.py  dev.py
backend/dockerfiles/: dev.Dockerfile
backend/entrypoints/: celery-beat-entrypoint.sh  celery-entrypoint.sh  entrypoint  start
backend/env/: local.env
backend/main/: admin.py  api_router.py  apps.py  models.py  serializers.py  tasks.py  views.py
backend/main/migrations/: 0001_initial.py  0002_add_patient_and_medician.py  0002_alter_dataset_dataset_uuid.py  0002_alter_medician_name_alter_patient_name.py  0003_alter_dataset_dataset_uuid.py  0004_alter_dataset_dataset_uuid.py  0005_alter_dataset_dataset_uuid.py  0006_alter_dataset_dataset_uuid.py  0007_prediction_alter_dataset_dataset_uuid_delete_predict_and_more.py  0008_rename_file_url_datafile_file_and_more.py  0009_alter_dataset_upload_status_and_more.py  0010_alter_prediction_file.py  0011_alter_datafile_file.py
backend/main/utils/: validator.py
backend/main/utils/prediction/: prediction_utils.py
backend/nginx/: nginx.conf  nginx_flower.conf
frontend/: package-lock.json  package.json
frontend/dockerfiles/: dev.Dockerfile
frontend/nginx/: Dockerfile  nginx copy.conf  nginx.conf
frontend/src/: App.css  App.jsx  index.css  index.js
frontend/src/components/: ContactData.jsx  DragDropFile.jsx  DragDropFileExample.jsx  DropBox.jsx  Footer.jsx  Header.jsx  Image.jsx  InputData.jsx  NotFound.jsx  Title.jsx  (+4 more)
(+9 files in other folders)
